@@ -1454,6 +1454,7 @@ FeatureRoguishOpportunistSeizeTheChance	FeatureDefinition	FeatureDefinition	cca8
 FeatureRoguishSlayerChainOfExecution	FeatureDefinition	FeatureDefinition	dfdc52f8-f2e7-5f59-b9f3-ef6894635e32
 FeatureRoguishSlayerElimination	FeatureDefinition	FeatureDefinition	b500c091-69a7-5ce4-b9f3-bf69ad6b26d3
 FeatureRoguishSlayerFatalStrike	FeatureDefinition	FeatureDefinition	9c5400eb-53e3-53f5-bb38-0edde8e5d8d6
+FeatureRoguishThiefThiefReflexes	FeatureDefinition	FeatureDefinition	140a41f7-2857-50f5-968d-ff441f3a157f
 FeatureSanctuary	FeatureDefinition	FeatureDefinition	b21149d4-6d11-55ea-88bb-efecd5341671
 FeatureSefTacticianStrategicPlan	FeatureDefinitionFeatureSet	FeatureDefinition	adb9d7d1-a30b-5c04-9663-771cc4ac75ea
 FeatureSetBladeDancerBladeDance	FeatureDefinitionFeatureSet	FeatureDefinition	9b607616-747c-5a9b-83ea-fdcde0466dec
