@@ -25,6 +25,8 @@ Feature/&FeatureRangerFoeSlayerDescription=Sie werden zu einem beispiellosen Jä
 Feature/&FeatureRangerFoeSlayerTitle=Feindbezwinger
 Feature/&FeatureRogueElusiveDescription=Du bist so ausweichend, dass Angreifer selten die Oberhand gegen dich gewinnen. Kein Angriffswurf hat einen Vorteil gegen dich, solange du nicht handlungsunfähig bist.
 Feature/&FeatureRogueElusiveTitle=Schwer fassbar
+Feature/&FeatureRoguishThiefThiefReflexesDescription=Ab der 17. Stufe bist du geschickt darin, Hinterhalte zu legen und Gefahren schnell zu entkommen. Du kannst in der ersten Runde jedes Kampfes zwei Züge machen. Du machst deinen ersten Zug auf deine normale Initiative und deinen zweiten Zug auf deine Initiative minus 10. Du kannst diese Funktion nicht nutzen, wenn du überrascht bist.
+Feature/&FeatureRoguishThiefThiefReflexesTitle=Die Reflexe des Diebes
 Feature/&FeatureSetMonkDiamondSoulDescription=Ab der 14. Stufe verleiht dir deine Beherrschung von Ki Beherrschung aller Rettungswürfe. Außerdem kannst du jedes Mal, wenn du einen Rettungswurf machst und misslingt, 1 Ki-Punkt ausgeben, um ihn zu wiederholen und das zweite Ergebnis zu nehmen.
 Feature/&FeatureSetMonkDiamondSoulTitle=Diamantseele
 Feature/&FeatureSetMonkTongueSunMoonDescription=Ab der 13. Stufe lernst du, das Ki anderer Geister zu berühren, damit du alle gesprochenen Sprachen verstehst. Darüber hinaus kann jedes Wesen, das eine Sprache verstehen kann, verstehen, was Sie sagen.
