@@ -25,6 +25,8 @@ Feature/&FeatureRangerFoeSlayerDescription=You become an unparalleled hunter of 
 Feature/&FeatureRangerFoeSlayerTitle=Foe Slayer
 Feature/&FeatureRogueElusiveDescription=You are so evasive that attackers rarely gain the upper hand against you. No attack roll has advantage against you while you aren't incapacitated.
 Feature/&FeatureRogueElusiveTitle=Elusive
+Feature/&FeatureRoguishThiefThiefReflexesDescription=Starting at 17th level, you have become adept at laying ambushes and quickly escaping danger. You can take two turns during the first round of any combat. You take your first turn at your normal initiative and your second turn at your initiative minus 10. You can’t use this feature when you are surprised.
+Feature/&FeatureRoguishThiefThiefReflexesTitle=Thief's Reflexes
 Feature/&FeatureSetMonkDiamondSoulDescription=Beginning at 14th level, your mastery of Ki grants you proficiency in all saving throws. Additionally, whenever you make a saving throw and fail, you can spend 1 Ki point to reroll it and take the second result.
 Feature/&FeatureSetMonkDiamondSoulTitle=Diamond Soul
 Feature/&FeatureSetMonkTongueSunMoonDescription=Starting at 13th level, you learn to touch the Ki of other minds so that you understand all spoken languages. Moreover, any creature that can understand a language can understand what you say.
