@@ -25,6 +25,8 @@ Feature/&FeatureRangerFoeSlayerDescription=Te conviertes en un cazador sin igual
 Feature/&FeatureRangerFoeSlayerTitle=Asesino de enemigos
 Feature/&FeatureRogueElusiveDescription=Eres tan evasivo que los atacantes rara vez ganan ventaja contra ti. Ninguna tirada de ataque tiene ventaja contra ti mientras no estés incapacitado.
 Feature/&FeatureRogueElusiveTitle=Elusivo
+Feature/&FeatureRoguishThiefThiefReflexesDescription=A partir del nivel 17, te has vuelto experto en tender emboscadas y escapar rápidamente del peligro. Puedes tomar dos turnos durante la primera ronda de cualquier combate. Tomas tu primer turno con tu iniciativa normal y tu segundo turno con tu iniciativa menos 10. No puedes usar esta función cuando te sorprenden.
+Feature/&FeatureRoguishThiefThiefReflexesTitle=Reflejos de ladrón
 Feature/&FeatureSetMonkDiamondSoulDescription=A partir del nivel 14, tu dominio del Ki te otorga competencia en todas las tiradas de salvación. Además, cada vez que haces una tirada de salvación y fallas, puedes gastar 1 punto de Ki para volver a tirar y obtener el segundo resultado.
 Feature/&FeatureSetMonkDiamondSoulTitle=alma de diamante
 Feature/&FeatureSetMonkTongueSunMoonDescription=A partir del nivel 13, aprendes a tocar el Ki de otras mentes para que entiendas todos los idiomas hablados. Además, cualquier criatura que pueda entender un idioma puede entender lo que dices.
