@@ -25,6 +25,8 @@ Feature/&FeatureRangerFoeSlayerDescription=Vous devenez un chasseur hors pair de
 Feature/&FeatureRangerFoeSlayerTitle=Tueur d'ennemis
 Feature/&FeatureRogueElusiveDescription=Vous êtes si évasif que les attaquants prennent rarement le dessus sur vous. Aucun jet d'attaque n'a d'avantage contre vous tant que vous n'êtes pas incapable d'agir.
 Feature/&FeatureRogueElusiveTitle=Insaisissable
+Feature/&FeatureRoguishThiefThiefReflexesDescription=À partir du niveau 17, vous êtes devenu habile à tendre des embuscades et à échapper rapidement au danger. Vous pouvez prendre deux tours lors du premier tour de n'importe quel combat. Vous jouez votre premier tour à votre initiative normale et votre deuxième tour à votre initiative moins 10. Vous ne pouvez pas utiliser cette capacité lorsque vous êtes surpris.
+Feature/&FeatureRoguishThiefThiefReflexesTitle=Réflexes du voleur
 Feature/&FeatureSetMonkDiamondSoulDescription=À partir du niveau 14, votre maîtrise du Ki vous confère la maîtrise de tous les jets de sauvegarde. De plus, chaque fois que vous faites un jet de sauvegarde et que vous échouez, vous pouvez dépenser 1 point de Ki pour le relancer et prendre le deuxième résultat.
 Feature/&FeatureSetMonkDiamondSoulTitle=Âme de diamant
 Feature/&FeatureSetMonkTongueSunMoonDescription=À partir du niveau 13, vous apprenez à toucher le Ki des autres esprits afin de comprendre toutes les langues parlées. De plus, toute créature qui peut comprendre une langue peut comprendre ce que vous dites.
