@@ -25,6 +25,8 @@ Feature/&FeatureRangerFoeSlayerDescription=Diventi un cacciatore senza pari dei 
 Feature/&FeatureRangerFoeSlayerTitle=Uccisore di nemici
 Feature/&FeatureRogueElusiveDescription=Sei così evasivo che gli aggressori raramente prendono il sopravvento su di te. Nessun tiro per colpire ha vantaggio contro di te finché non sei inabile.
 Feature/&FeatureRogueElusiveTitle=Sfuggente
+Feature/&FeatureRoguishThiefThiefReflexesDescription=A partire dal 17° livello, sei diventato esperto nel tendere imboscate e sfuggire rapidamente al pericolo. Puoi fare due turni durante il primo round di qualsiasi combattimento. Svolgi il tuo primo turno alla tua normale iniziativa e il secondo turno alla tua iniziativa meno 10. Non puoi usare questo privilegio quando sei sorpreso.
+Feature/&FeatureRoguishThiefThiefReflexesTitle=Riflessi da ladro
 Feature/&FeatureSetMonkDiamondSoulDescription=A partire dal 14° livello, la tua padronanza del Ki ti garantisce la competenza in tutti i tiri salvezza. Inoltre, ogni volta che effettui un tiro salvezza e fallisci, puoi spendere 1 punto Ki per ritirarlo e prendere il secondo risultato.
 Feature/&FeatureSetMonkDiamondSoulTitle=Anima Diamante
 Feature/&FeatureSetMonkTongueSunMoonDescription=A partire dal 13° livello, impari a toccare il Ki di altre menti in modo da comprendere tutte le lingue parlate. Inoltre, qualsiasi creatura in grado di comprendere una lingua può comprendere ciò che dici.
