@@ -25,6 +25,8 @@ Feature/&FeatureRangerFoeSlayerDescription=Você se torna um caçador incompará
 Feature/&FeatureRangerFoeSlayerTitle=Matador de Inimigos
 Feature/&FeatureRogueElusiveDescription=Você é tão evasivo que os atacantes raramente ganham vantagem contra você. Nenhuma jogada de ataque tem vantagem contra você enquanto você não estiver incapacitado.
 Feature/&FeatureRogueElusiveTitle=Enganoso
+Feature/&FeatureRoguishThiefThiefReflexesDescription=A partir do 17º nível, você se tornou adepto de armar emboscadas e escapar rapidamente do perigo. Você pode jogar dois turnos durante a primeira rodada de qualquer combate. Você faz seu primeiro turno com sua iniciativa normal e seu segundo turno com sua iniciativa menos 10. Você não pode usar esse recurso quando estiver surpreso.
+Feature/&FeatureRoguishThiefThiefReflexesTitle=Reflexos de Ladrão
 Feature/&FeatureSetMonkDiamondSoulDescription=A partir do 14º nível, seu domínio do Ki concede a você proficiência em todos os testes de resistência. Além disso, sempre que fizer um teste de resistência e falhar, você pode gastar 1 ponto de Ki para rolar novamente e obter o segundo resultado.
 Feature/&FeatureSetMonkDiamondSoulTitle=alma de diamante
 Feature/&FeatureSetMonkTongueSunMoonDescription=A partir do 13º nível, você aprende a tocar o Ki de outras mentes para entender todos os idiomas falados. Além disso, qualquer criatura que possa entender um idioma pode entender o que você diz.
